2008-03-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.29 released.

2008-03-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* all: Obey 'MaxRootingDepth'.

	* syntax.C, syntax.h (Syntax::order_index): Renamed from 'order'
	to avoid name conflict.
	* program_document.C, traverse.C, printer_file.C: Update callers.

	* lexer_table.C: Fix comment.

2008-03-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C (SourceFile::add_entry): Removed duplicate
	definition of 'total'.

2008-03-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.28 released.

2008-03-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log-std.dai (chemical): Give default value to 'chemical' for
	the sake of the reference manual.

	* program_document.C (ProgramDocument::own_entries): New
	'new_only' parameter.
	(ProgramDocument::print_model): Use it.

2008-03-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* library.h (doc_fun): Changed parameter type.
	* log_select.C (LogSelect::document_entries): Update.
	* program_document.C (ProgramDocument::print_model): Update.

	* rootdens_GP1D.C, rootdens_G_P.C (Rootdens::create_uniform): Made
	the later default for 1D.

	* rootdens.C (Rootdens::load_base): Call 'Model::load_model'.

2008-03-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* model.h, model.C (Model::load_model): New utility.
	* alist.C, alist.h (AttributeList::add_strings): New convenience
	function.
	* format_LaTeX.C (FormatLaTeX::alist_description): Use it.

	* model.h (ModelLogable, ModelAListed): New base classes.
	* all: Use them.

2008-03-13  Mikkel Mollerup  <mmo@life.ku.dk>

	* soil_water.h, soil_water.C, chemical.h, chemical_std.C: Prepare
	for mobile/immobile solute support.  
	* column_std.C: Update caller.
	
2008-03-12  Mikkel Mollerup  <mmo@life.ku.dk>

	* Makefile (COMPONENTS): Added it.
	* mobsol.C, mobsol.h: New component.
	* horizon.h, horizon.C, soil.h, soil.C: Support it.
	
2008-03-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_sow.C (plant): New alias.