@@ -58,9 +58,7 @@ private:
   virtual void flow (const GeometryRect& geo, 
                      const Soil& soil, 
                      const SoilWater& soil_water, 
-		     const Adsorption& adsorption,
                      symbol name,
-                     std::vector<double>& M, 
                      std::vector<double>& C, 
                      const std::vector<double>& S, 
                      std::vector<double>& J, 
